# cheppers

./: CMakeLists.txt  README.txt  main.cpp  test.txt
include/: bitboard.h  board.hpp  enums.hpp  pieces.hpp
src/: bitboard.cpp  board.cpp
